# Communication-Library

./: CMakeLists.txt  CPPLINT.cfg  README.md
.github/: copilot-instructions.md
.github/workflows/: test.yml
cmake/: CommunicationLibraryConfig.cmake.in
include/CommunicationLibrary/: CommBuffer.h  RestInterface.h
test/: CMakeLists.txt  README.md  main.cpp
test/contracts/: RestInterfaceContractTests.cpp
